# physicalai-final-challenge

./: .gitignore  package.xml  setup.py  train_mlp_mnist.py
src/final_challenge_pkg/: robot_controller.py
